cpp/test/Slice/errorDetection/EnumRedefinition.err
EnumRedefinition.ice:12 error: redefinition of enum `Enum'
