cpp/test/Slice/errorDetection/EnumRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

enum Enum { A, B, C };
enum Enum { D, E, F };
